# cookiecutter-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cookiecutter.json  test.sh
cmake/: Conan.cmake  DefaultSettings.cmake  Doxygen.cmake  Vcpkg.cmake
include/: main.h
test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt  profile_gcc.txt
{{ cookiecutter.project_slug }}/cmake/: Doxygen.cmake  IAR.cmake  Settings.cmake  Sphinx.cmake  doxygen.cmake  module_install.cmake  settings.cmake
{{ cookiecutter.project_slug }}/cmake/modules/: asio.cmake  libevent.cmake
{{ cookiecutter.project_slug }}/cmake/scripts/: install.cmake
{{ cookiecutter.project_slug }}/docs/: conf.py.in  index.rst
{{ cookiecutter.project_slug }}/include/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.h
{{ cookiecutter.project_slug }}/src/: main.cc  module.c  module.h
{{ cookiecutter.project_slug }}/test/: CMakeLists.txt  main_test.cc
{{ cookiecutter.project_slug }}/third/: CMakeLists.txt
